unpackaged/main/default/objects/Account/fields/Current_provider_CRM__c.field-meta.xml
<CustomField>
    <fullName>Current_provider_CRM__c</fullName>
    <label>Current provider - CRM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>