unpackaged/main/default/objects/Account/fields/Current_system_billing__c.field-meta.xml
<CustomField>
    <fullName>Current_system_billing__c</fullName>
    <label>Current system - billing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>