unpackaged/main/default/objects/Account/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100,"All Account Details Captured", "Missing: "&amp;IF( ISPICKVAL( Industry,""),"Industry, ","")&amp;""&amp;IF(ISPICKVAL(Rating,""), "Rating, ","")&amp;""&amp;IF( LEN(BillingCity) = 0, "Complete Address, ","")&amp;""&amp;IF( LEN(Phone) = 0, "Phone, ","")&amp;""&amp;IF( ISPICKVAL(Type,""), "Type",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>