unpackaged/main/default/objects/Account/fields/Echo_relationship_owner__c.field-meta.xml
<CustomField>
    <fullName>Echo_relationship_owner__c</fullName>
    <label>Echo relationship owner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matt Bowd</fullName>
            </value>
            <value>
                <fullName>Rob Milloy</fullName>
            </value>
            <value>
                <fullName>Gareth Welch</fullName>
            </value>
            <value>
                <fullName>Chris Beurich</fullName>
            </value>
            <value>
                <fullName>Mark Alfer</fullName>
            </value>
            <value>
                <fullName>Andy Mack</fullName>
                <isActive>false</isActive>
                <label>Andy Mack</label>
            </value>
            <value>
                <fullName>Caroline Boden</fullName>
                <isActive>false</isActive>
                <label>Caroline Boden</label>
            </value>
            <value>
                <fullName>Greg Horne</fullName>
                <isActive>false</isActive>
                <label>Greg Horne</label>
            </value>
            <value>
                <fullName>Jim White</fullName>
                <isActive>false</isActive>
                <label>Jim White</label>
            </value>
            <value>
                <fullName>Lloyd Birkhead</fullName>
                <isActive>false</isActive>
                <label>Lloyd Birkhead</label>
            </value>
            <value>
                <fullName>Monica Mackintosh</fullName>
                <isActive>false</isActive>
                <label>Monica Mackintosh</label>
            </value>
            <value>
                <fullName>Nathan Barton</fullName>
                <isActive>false</isActive>
                <label>Nathan Barton</label>
            </value>
            <value>
                <fullName>Richard Harris</fullName>
                <isActive>false</isActive>
                <label>Richard Harris</label>
            </value>
            <value>
                <fullName>Richard Harvey</fullName>
                <isActive>false</isActive>
                <label>Richard Harvey</label>
            </value>
            <value>
                <fullName>Tony Kelly</fullName>
                <isActive>false</isActive>
                <label>Tony Kelly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>