unpackaged/main/default/objects/Account/fields/Existing_services__c.field-meta.xml
<CustomField>
    <fullName>Existing_services__c</fullName>
    <label>Existing services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RapidXtra</fullName>
            </value>
            <value>
                <fullName>Aptumo</fullName>
            </value>
            <value>
                <fullName>Early arrears debt</fullName>
            </value>
            <value>
                <fullName>Office debt</fullName>
            </value>
            <value>
                <fullName>Trace and collect</fullName>
            </value>
            <value>
                <fullName>Revenue protection</fullName>
            </value>
            <value>
                <fullName>PWV</fullName>
            </value>
            <value>
                <fullName>Warrants</fullName>
            </value>
            <value>
                <fullName>Contact centre</fullName>
            </value>
            <value>
                <fullName>Back office services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>