unpackaged/main/default/objects/Account/fields/LF__LF_Match_Code__c.field-meta.xml
<CustomField>
    <fullName>LF__LF_Match_Code__c</fullName>
    <description>Match hash for advanced matching</description>
    <label>LF Match Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>