unpackaged/main/default/objects/Account/fields/Market_type__c.field-meta.xml
<CustomField>
    <fullName>Market_type__c</fullName>
    <label>Market type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Monopoly</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>