unpackaged/main/default/objects/Account/fields/Number_of_connections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_connections__c</fullName>
    <label>Number of connections</label>
    <length>50</length>
    <type>Text</type>
</CustomField>