unpackaged/main/default/objects/Account/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Energy - both</fullName>
            </value>
            <value>
                <fullName>Energy - gas</fullName>
            </value>
            <value>
                <fullName>Energy - electricity</fullName>
            </value>
            <value>
                <fullName>Multi-utility</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Telecoms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>